--- a/core/brigrid/components/grid-column/_grid-column-base.scss
+++ b/core/brigrid/components/grid-column/_grid-column-base.scss
@@ -5,7 +5,9 @@
 // common styles of grid-column
 %_grid-column-base {
     box-sizing: border-box;
+    position: relative;
     min-height: 1px;
+    width: 100%;
 }
 
 @mixin grid-column-base--flex($gutter: null, $grid: $default-grid) {
